# factory-trytond

./: .gitignore  .pypirc  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  pythonpackage.yml  tests.yml
factory-trytond/: base.py
factory_trytond/: __init__.py
src/factory_trytond/: __init__.py
tests/: __init__.py  conftest.py  test_factory_trytond.py  test_lazy_search.py  test_model_data.py  test_references.py  test_wizard.py
