[metadata]
name             = factory-trytond
version          = attr: factory_trytond.__version__
author           = Calidae
author_email     = dev@calidae.com
url              = https://github.com/calidae/factory-trytond
description      = Factory Boy - Trytond integration
long_description = file: README.md
long_description_content_type = text/markdown
license          = GPLv3+
platform         = any
classifiers      =
    Development Status :: 4 - Beta
    Framework :: Tryton
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing

[options]
python_requires  = >=3.7
packages         = factory_trytond
package_dir      =
    =src
install_requires =
    factory-boy
    trytond
